# tgparsing-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  docker-compose-dev-back.yml  docker-compose-dev.yml  docker-compose.yml  env.example  nginx.conf  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yml  lint.yml
app/: Dockerfile  backend.sh  manage.py  roles_data.json  run.sh  server.py  settings.py
app/database/: cli.py  db_async.py  db_sync.py  utils.py
app/migrations/versions/: 2023-06-24_21:25:37-280610ccc91c_initial.py  2023-06-26_10:30:35-b3d9f56436a7_lastname_and_firstname_in_user_model_.py  2023-06-29_06:07:30-9a78d54bceef_add_timezone_into_user_model.py  2023-06-29_21:11:38-55f66eac9c02_tariffs.py  2023-07-01_21:37:53-9bbaf25b5c1c_add_tg_accounts_model.py  2023-07-06_11:11:26-8883acfbfc32_add_phone_number_into_tgaccounts.py  (+20 more)
app/services/: __init__.py
app/services/payment/: models.py  (+4 more)
app/tests/: conftest.py
app/utils/: files.py  responses.py  validators.py
auth/: manager.py  schemas.py
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  api_main.py  config.py  manage.py  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roles_data.json  server.py  settings.py  setup.cfg
backend/accounts/: routes.py  views.py
backend/auth/: auth.py  database.py  manager.py  schemas.py
backend/database/: cli.py  db_async.py  db_sync.py
backend/migrations/: env.py
backend/models/: models.py
backend/role/: routes.py  schemas.py
backend/services/: __init__.py
backend/tests/: conftest.py
backend/user/: auth.py  dependencies.py  manager.py  routes.py  schemas.py  views.py
letsencrypt/: acme.json
migrations/: env.py
models/: models.py
nginx/: default.conf
tgparcing-venv/: pyvenv.cfg
traefik_config/: traefik.yml
(+190 files in other folders)
