[tool.poetry]
name = "tgparsing"
version = "0.1.0"
description = ""
authors = ["Evgeny Malikov <evgeny.m3v@yandex.ru>, Igor Sverchkov <knjaz1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
python-jose = "^3.3.0"
celery = {extras = ["redis"], version = "^5.3.1"}
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.1"
aiofiles = "^23.1.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pydantic = {version = "^1", extras = ["email"]}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
types-aiofiles = "^23.1.0.5"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.8"
types-redis = "^4.6.0.3"
pylint-pytest = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = "migrations"
line_length = 79
lines_after_imports = 2

# pytest
[tool.pytest.ini_options]
addopts = "-v"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["app/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning"
]

# mypy
[tool.mypy]
exclude = ["migrations/"]


[tool.pylint]
ignore = [".git", "__pycache__", "migrations", ".venv"]
extension-pkg-whitelist = ["pydantic"]
load-plugins = ["pylint_pytest"]
max-args = 8
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "W0511"]
